Remove overscroll prevention (works wrong on mobile)

--- a/src/css/application.sass
+++ b/src/css/application.sass
@@ -4,14 +4,7 @@
 @import url(http://fonts.googleapis.com/css?family=Comfortaa&subset=latin,cyrillic)
 
 body, html
-  width: 100%
   height: 100%
-  overflow: hidden
-
-.wrapper
-  height: 100%
-  overflow: scroll
-  -webkit-overflow-scrolling: touch
 
 h1
   margin: 0
